--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .nav-container{
-    background-color: rgba(51, 49, 49, 0.692);
+    background-color: rgba(26, 21, 21, 0.692);
     padding: 10px;
     color: aliceblue;
     display: flex;
@@ -23,5 +23,39 @@
 }
 .main-page{
     background-image: url("../images/background.png"), 
-    linear-gradient();
+    linear-gradient(90deg, rgb(29, 28, 28) , rgb(32, 28, 28));
+    display: flex;
+    height: 100vh;
+    border: 2px solid green;
+    align-items: center;
+    color: aliceblue;
+    justify-content: space-around;
+}
+
+.main-img{
+    width: 400px;
+}
+.main-top-text{
+    color: orangered;
+}
+.titel{
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.pareg{
+    font-size: 20px;
+    margin: 15px;
+}
+
+.contact{
+    background-color: orangered;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 25px;
+    color: aliceblue;
+    font-weight: bold;
+    border: none;    
 }
